2008-10-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program-private.h
	* src/hildon-program.c (hildon_program_init)
	(hildon_program_finalize): Removed unused variables group_leader
	and name from HildonProgramPrivate.

2008-10-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-check-button.c (hildon_check_button_set_active)
	(hildon_check_button_get_active, hildon_check_button_new): Use
	g_object_[gs]et_qdata() instead of g_object_[gs]et_data().

2008-10-08  Alejandro Pinheiro	 <apinheiro@igalia.com>

	* src/hildon-touch-selector.h
	(hildon_touch_selector_set_column_attributes): added deprecation
	guard HILDON_DISABLE_DEPRECATED
	* src/hildon-time-selector.c
	(hildon_time_selector_set_time)
	(hildon_time_selector_get_time): Fixed a typo on documentation
	* src/hildon-touch-selector.c: update HildonTouchSelector and
	HildonTouchSelectorColumn documentation
	* src/hildon-touch-selector-entry.c: update "text-column" property
	documentation
	* doc/hildon-docs.sgml: added hildon-touch-selector-column in order
	to be added to the general documentation.

2008-10-08  Alejandro G. Castro	 <alex@igalia.com>

	* examples/hildon-pannable-area-example-4.c,
	(main),
	* examples/hildon-pannable-area-example.c,
	(main): Modified the code in order to use the container add, with
	viewport treeviews could have problems if they are really big.

2008-10-06  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-weekday-picker.c,
	* src/hildon-weekday-picker.h: Removed the deprecated symbols after
	the agreement regarding deprecation in the library.

2008-10-06  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-picker-button-multicolumn-example.c:
	(main): Use custom "done" button text.

	* src/hildon-picker-button.c: (hildon_picker_button_get_property),
	(hildon_picker_button_set_property),
	(hildon_picker_button_clicked), (hildon_picker_button_class_init),
	(hildon_picker_button_init),
	(+hildon_picker_button_get_done_button_text),