@@ -48,6 +48,7 @@
 #include                                        <src/hildon-picker-dialog.h>
 #include                                        <src/hildon-picker-button.h>
 #include                                        <src/hildon-date-button.h>
+#include                                        <src/hildon-check-button.h>
 #include                                        <src/hildon-time-button.h>
 
 hildon_banner_get_type
@@ -95,4 +96,5 @@ hildon_date_selector_get_type
 hildon_picker_dialog_get_type
 hildon_picker_button_get_type
 hildon_date_button_get_type
+hildon_check_button_get_type
 hildon_time_button_get_type
